A big docker update
moved out of experiments
containerized all the things
used docker names instead of IPs

--- a/60-qumulo.conf
+++ b/60-qumulo.conf
@@ -13,7 +13,7 @@ $ActionFileDefaultTemplate RSYSLOG_FileFormat
 #$ActionFileDefaultTemplate RSYSLOG_ForwardFormat
 
 if $app-name startswith 'qumulo' then {
-    action(type="omfwd" target="192.168.11.156" port="1514" protocol="udp" template="QumuloFwdFmt"))
+    action(type="omfwd" target="qatime" port="1514" protocol="udp" template="QumuloFwdFmt"))
 
     set $!usr!node = re_extract($hostname,'[-]([0-9]+)$',0,1,"");
     set $!usr!cluster = re_extract($hostname,'(.*?)[-]([0-9]+)$',0,1,"");
