--- a/qatime_config.ini
+++ b/qatime_config.ini
@@ -6,3 +6,12 @@ UDP_PORT = 1514
 [atime]
 NFS_MOUNT = /mnt/qumulo
 BATCH_SIZE = 10
+
+[test]
+TEST_PATH = /test_qatime/
+
+[qumulo]
+QADDRESS = qumulo
+QPORT = 8000/
+QLOGIN = admin
+QPASS = Admin123
