--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ volumes:
   qumulo:
     driver_opts:
       type: "nfs"
-      o: "addr=192.168.240.130,hard,intr,rw,tcp,nfsvers=3"
+      o: "addr=192.168.240.130,hard,intr,rw,tcp,nfsvers=3,noac,lookupcache=none"
       device: ":/"
